--- a/opusapp/src/main/res/values-fr/strings.xml
+++ b/opusapp/src/main/res/values-fr/strings.xml
@@ -213,6 +213,9 @@
 
     <!-- Units -->
     <string name="unit_MB">%s Mo</string>
+    <string name="unit_p28dB">+28 dB</string>
+    <string name="unit_0dB">0 dB</string>
+    <string name="unit_m28dB">-28 dB</string>
 
 
     <!-- Other UI -->
