--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -211,6 +211,9 @@
 
     <!-- Units -->
     <string name="unit_MB">%s MB</string>
+    <string name="unit_p28dB">+28 dB</string>
+    <string name="unit_0dB">0 dB</string>
+    <string name="unit_m28dB">-28 dB</string>
 
 
     <!-- Other UI -->
