--- a/opusapp/src/main/res/values-fr/strings.xml
+++ b/opusapp/src/main/res/values-fr/strings.xml
@@ -88,6 +88,7 @@
     <string name="menuitem_label_reload">Recharger</string>
     <string name="menuitem_label_cancel_reload">Annuler le rechargement</string>
     <string name="menuitem_label_show_hidden">Afficher les objets cachés</string>
+    <string name="menuitem_label_other_options">"Plus d'options&#8230;"</string>
     <string name="menuitem_label_share">Partager</string>
     <string name="menuitem_label_toggle_car_mode">Mode voiture</string>
     <string name="menuitem_label_delayed_pause">Pause auto.</string>
@@ -130,7 +131,7 @@
 
     <string name="drawer_section_label_media_management">Gestion des médias</string>
     <string name="drawer_section_label_label_settings">Paramètres</string>
-    <string name="drawer_item_label_manage_libraries">Gestion des bibliothèques</string>
+    <string name="drawer_item_label_manage_libraries">Liste des bibliothèques</string>
     <string name="drawer_item_label_library_soundfx">Effets sonores</string>
     <string name="drawer_item_label_library_settings">Paramètres de la bibliothèque</string>
     <string name="drawer_item_label_application_settings">Paramètres de l\'application</string>
