--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="menuitem_label_reload">Reload</string>
     <string name="menuitem_label_cancel_reload">Cancel Reloading</string>
     <string name="menuitem_label_show_hidden">Show hidden items</string>
+    <string name="menuitem_label_other_options">"More options&#8230;"</string>
     <string name="menuitem_label_share">Share</string>
     <string name="menuitem_label_toggle_car_mode">Car mode</string>
     <string name="menuitem_label_delayed_pause">Auto pause</string>
@@ -128,7 +129,7 @@
 
     <string name="drawer_section_label_media_management">Media management</string>
     <string name="drawer_section_label_label_settings">Settings</string>
-    <string name="drawer_item_label_manage_libraries">Manage libraries</string>
+    <string name="drawer_item_label_manage_libraries">Libraries list</string>
     <string name="drawer_item_label_library_soundfx">Sound effects</string>
     <string name="drawer_item_label_library_settings">Library settings</string>
     <string name="drawer_item_label_application_settings">Application settings</string>
